@@ -213,6 +213,7 @@ void mf_print_audit_features(regressor &reg, example* ec, size_t offset)
 void mf_local_predict(example* ec, size_t mf_num_threads, gd_vars& vars, regressor& reg)
 {
   label_data* ld = (label_data*)ec->ld;
+  set_minmax(ld->label);
 
   ec->final_prediction = finalize_prediction(ec->partial_prediction);
 
