@@ -9,7 +9,6 @@ char* bufread_simple_label(label_data* ld, char* c)
 {
   ld->label = *(float *)c;
   c += sizeof(ld->label);
-  set_minmax(ld->label);
   ld->weight = *(float *)c;
   c += sizeof(ld->weight);
   ld->initial = *(float *)c;
@@ -95,6 +94,5 @@ void parse_simple_label(void* v, v_array<substring>& words)
     cerr << "malformed example!\n";
     cerr << "words.index() = " << words.index() << endl;
   }
-  set_minmax(ld->label);
 }
 
